Felles 32 og Jersey for klient + server (#461)
* Ny felles og jersey

* Misc dependabot

* Modernere lister

* Nye endepunkt for abac og pdl